Refactor voter generation logic, add derived voter functionality, and integrate mathjs for statistical calculations

--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
     "start:backend": "cd backend && npm run start",
     "start:frontend": "cd frontend && npm run start"
+  },
+  "dependencies": {
+    "mathjs": "^14.4.0"
   }
 }
