--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "mathjs": "^14.4.0",
     "openai": "^4.97.0",
     "papaparse": "^5.5.2"
   }
