--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "typescript-eslint": "^8.32.1"
   },
   "dependencies": {
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mathjs": "^14.4.0",
